# info-flow-simulator

./: Cargo.toml  README.md
src/: cell.rs  consts.rs  display.rs  main.rs  message.rs
src/display/: cell.rs
src/message/: fllow.rs
