[package]
name = "info-flow-simulator"
version = "0.1.0"
authors = ["Sid <SidBayeck@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
default = ["dev"]
dev = [
  "bevy/dynamic",
]

[dependencies]
bevy = "0.8"
# 避免编译错误
alsa = "=0.6.0"
rand = "0.8.5"
